src/objects/ACCL__Account_Set_Manager__c.object
<CustomObject>
    <description>Custom object to store the relation between Customer Set and User.</description>
    <fields>
        <fullName>ACCL__Account_Set__c</fullName>
        <description>Reference to Customer Set.</description>
        <label>Customer Set</label>
        <referenceTo>ACCL__Account_Set__c</referenceTo>
        <relationshipLabel>Customer Set Managers</relationshipLabel>
        <relationshipName>Account_Set_Managers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies if the Customer Set manager record is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Customer Set Manager record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to user.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Set_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>From this date the record is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the record is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Customer Set Manager</label>
    <nameField>
        <displayFormat>ASM-{00000}</displayFormat>
        <label>Customer Set Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Set Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c  &gt;  ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>